<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
       <string name="action_settings">Settings</string>
<string name="bill_notice">Enter bill amount:</string>
<string name="tip_notice">Tip:</string>
<string name="total_notice">Total:</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="twenty_percent">20%</string>
</resources>
