<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/billAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/bill_notice" />

    <EditText
        android:id="@+id/bill_Form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/billAmountLabel"

        android:ems="20"

        android:paddingTop="40dp" />

    //Button Group

    <RadioGroup
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/billAmountLabel"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">




        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eighteen_percent"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFindAmount"
            android:text="@string/ten_percent" />
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eighteen_percent"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFindAmount"
            android:text="@string/fifteen_percent" />
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eighteen_percent"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFindAmount"
            android:text="@string/eighteen_percent" />
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eighteen_percent"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFindAmount"
            android:text="@string/twenty_percent" />
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eighteen_percent"/>
    </RadioGroup>
    //Tip Label

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonGroup"
        android:text="@string/tip_notice" />

    <TextView
        android:id="@+id/tipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tipLabel"
        android:layout_toRightOf="@+id/tipLabel" />

    //Total Label

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tipLabel"
        android:text="@string/total_notice" />

    <TextView
        android:id="@+id/totalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/totalLabel"
        android:layout_toRightOf="@+id/totalLabel"
        android:text="Hello" />
</RelativeLayout>
